<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dip"
    android:paddingRight="8dip"
    android:orientation="vertical">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/cities_add_city_city"
      android:layout_marginTop="16dp"/>

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <EditText
        android:id="@+id/add_city_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:imeOptions="actionDone|flagNoFullscreen"
        android:scrollHorizontally="true"
        android:selectAllOnFocus="true"
        android:paddingLeft="48dp"
        android:inputType="textNoSuggestions">
        <requestFocus />
      </EditText>

      <ImageButton
        android:id="@+id/add_city_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cities_add_city_gps_cd"
        android:src="@drawable/ic_gps"
        android:background="@drawable/holo_selector_nonfocusable"
        android:scaleType="fitCenter"
        android:layout_margin="5dp"
        android:layout_alignLeft="@id/add_city_name"
        android:layout_alignTop="@id/add_city_name"
        android:layout_alignBottom="@id/add_city_name" />

    </RelativeLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cities_add_city_timezone"
      android:layout_marginTop="16dp"/>

    <Spinner
      android:id="@+id/add_city_tz"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="left|center_vertical"
      android:spinnerMode="dropdown"
      android:layout_marginBottom="16dp" />

</LinearLayout>